ConsultingHub/force-app/main/default/objects/Dogs__c/Dogs__c.object-meta.xml
<CustomObject>
    <label>Dog</label>
    <nameField>
        <label>Dog</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>