ConsultingHub/force-app/main/default/objects/Dogs__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Golden Doodle</fullName>
            </value>
            <value>
                <fullName>Chihuahau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>