ConsultingHub/force-app/main/default/objects/Dogs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Breed__c</columns>
    <columns>Color__c</columns>
    <columns>Gender__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>